# NetworkManager-l2tp

./: .clang-format  .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  README.ubuntu  README.ubutntu  SECURITY.md  autogen.sh  configure.ac  nm-l2tp-service.conf  nm-l2tp-service.name.in  nm-l2tp.desktop.in
appdata/: network-manager-l2tp.metainfo.xml.in
auth-dialog/: Makefile.am  gnome-two-password-dialog.c  gnome-two-password-dialog.h  main.c  vpn-password-dialog.c  vpn-password-dialog.h
common-gnome/: Makefile.am  keyring-helpers.c  keyring-helpers.h
debian/: .gitignore  changelog  control  copyright  network-manager-l2tp-gnome.install  network-manager-l2tp.docs  network-manager-l2tp.install  network-manager-l2tp.postinst  rules  watch
m4/: compiler_options.m4  compiler_warnings.m4  git-sha-record.m4
po/: LINGUAS  Makevars  POTFILES.in  ar.po  as.po  be.po  be@latin.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.mo  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  (+29 more)
properties/: Makefile.am  advanced-dialog.c  advanced-dialog.h  auth-helpers.c  auth-helpers.h  gresource.xml  import-export.c  import-export.h  ipsec-dialog.c  ipsec-dialog.h  libnm-l2tp-properties.ver  libnm-vpn-plugin-l2tp-editor.ver  libnm-vpn-plugin-l2tp.ver  nm-l2tp-dialog.glade  nm-l2tp-dialog.ui  nm-l2tp-editor-plugin.c  nm-l2tp-editor-plugin.h  nm-l2tp-editor.c  nm-l2tp-editor.h  nm-l2tp.c  nm-l2tp.h  ppp-dialog.c  ppp-dialog.h
shared/: Makefile.am  README  nm-default.h  nm-l2tp-crypto-nss.c  nm-l2tp-crypto-nss.h  nm-l2tp-crypto-openssl.c  nm-l2tp-crypto-openssl.h  nm-service-defines.h  utils.c  utils.h
shared/nm-utils/: gsystem-local-alloc.h  nm-glib.h  nm-macros-internal.h  nm-secret-utils.c  nm-secret-utils.h  nm-shared-utils.c  nm-shared-utils.h  nm-vpn-plugin-macros.h  nm-vpn-plugin-utils.c  nm-vpn-plugin-utils.h
shared/nm-vpn/: nm-vpn-plugin-utils.h
src/: Makefile.am  nm-l2tp-pppd-compat.h  nm-l2tp-pppd-plugin.c  nm-l2tp-pppd-service.xml  nm-l2tp-pppd-status.h  nm-l2tp-service-defines.h  nm-l2tp-service.c  nm-l2tp-service.h  nm-ppp-status.h
